force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/GTM_Assessment_Dimension_Override__mdt.object-meta.xml
<CustomObject>
    <label>GTM Assessment Dimension Override</label>
    <pluralLabel>GTM Assessment Dimension Overrides</pluralLabel>
</CustomObject>