force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive overrides are skipped and the slot inherits.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>