force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Ceiling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Reason__c</fullName>
    <label>Ceiling Reason</label>
    <description>Why the excluded options are not on offer, shown next to them. Required whenever Max_Attainable__c is set: a ceiling with no stated reason is indistinguishable from a rigged scale.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>