force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension</label>
    <description>The BASE slot key being overridden -- always the base key, even for a substitution, because that is the slot position being replaced. The replacement&#x27;s own key goes in New_Key__c.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>