force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <description>Which instrument this override belongs to: Readiness (the eight scored slots, 1-4) or Complexity (the six estate-complexity dimensions, 1-3). Blank means Readiness, so every override written before complexity became adaptive keeps its meaning without being rewritten.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>