force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <description>Replacement display name for the slot. Null inherits.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>