force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <label>Layer</label>
    <description>reword = same anchors, pair-specific examples (layer 1). recalibrate = the anchors move, so a 4 is harder or easier to earn (layer 2). substitute = a different question in the same position carrying the same risk theme (layer 3). Author at the lowest layer that does the job; every layer up costs comparability.</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>reword</fullName>
                <default>true</default>
                <label>reword</label>
            </value>
            <value>
                <fullName>recalibrate</fullName>
            </value>
            <value>
                <fullName>substitute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>