force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Measures__c.field-meta.xml
<CustomField>
    <fullName>Measures__c</fullName>
    <label>Measures</label>
    <description>The one-line "what this dimension measures", overriding the base wording from GTM_Assessment_Question__mdt when a pair changes what the question is actually counting.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>