force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/New_Key__c.field-meta.xml
<CustomField>
    <fullName>New_Key__c</fullName>
    <label>New Key</label>
    <description>Replacement slot key. Substitutions only. The new key is what Section_Scores__c stores, which is why that field takes arbitrary JSON keys and needs no migration when a substitution is added.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>