force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Pair__c.field-meta.xml
<CustomField>
    <fullName>Pair__c</fullName>
    <label>Pair</label>
    <description>DeveloperName of the GTM_Assessment_Pair__mdt this override belongs to.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>