force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <description>Replacement question text. Null inherits.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>