force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <description>Why this override exists, citing source file paths. REQUIRED and non-empty for layer substitute: swapping a slot out is the largest thing an author can do to comparability, so it is the one edit that must justify itself in writing.</description>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>