force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Respondent_Hint__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Hint__c</fullName>
    <label>Respondent Hint</label>
    <description>The prospect-facing hint shown under this question — where to find the numbers it asks for, in their own platform's words. Written TO the respondent. Its counterpart, Evidence Prompt, is written ABOUT the respondent and is consultant-only; the two must never be confused, because the guest questionnaire renders this one and only this one.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>