force-app/main/default/objects/GTM_Assessment_Dimension_Override__mdt/fields/Variant_Key__c.field-meta.xml
<CustomField>
    <fullName>Variant_Key__c</fullName>
    <label>Variant Key</label>
    <description>Stable author-set name for one branch variant of a slot, e.g. mce_estate or mcae_estate. Recorded on the submitted request in Instrument_Branch_Path__c so a historical readout can say WHICH question filled each slot, not merely which pack was used. Blank on the unconditional default row.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>